Encode special characters in XML attribute names

Special characters that are not allowed by XML spec in attribute name
are encoded in hex using following notation _.XX

BUG: 214816